@@ -1,5 +1,9 @@
 2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* StackPanel.cs: Fixed ArrangeOverride.
+
+2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* StackPanel.cs: Started implementing IScrollInfo.
 
 2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>
